--- a/Bikerzone.html
+++ b/Bikerzone.html
@@ -19,6 +19,8 @@
             extend: {
               colors: {
                 'bike-primary': '#E76F51',
+                'bike-primary-bg': 'rgba(231, 111, 81, 0.10)',
+                'description-color': 'rgba(0, 0, 0, 0.80)',
               }
             }
           }
@@ -68,6 +70,79 @@
               <a class="btn bg-bike-primary text-white">Login</a>
             </div>
           </div>
+
+          <!-- slider -->
+          <div class="carousel w-full bg-bike-primary-bg">
+            <!-- slide 1 -->
+            <div id="slide1" class="carousel-item relative w-full">
+                <div class="hero h-[550px]">
+                    <div class="hero-content flex-col-reverse lg:flex-row-reverse">
+                      <img src="./images/slider/bike1.png" class="w-[400px]" />
+                      <div class="flex-1 w-[600px]">
+                        <h1 class="text-5xl font-bold text-black">Ride-on R15 V4 <br>with Smile</h1>
+                        <p class="py-6 text-description-color">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
+                      </div>
+                    </div>
+                  </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide4" class="btn btn-circle">❮</a> 
+                <a href="#slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <!-- slide 2 -->
+            <div id="slide2" class="carousel-item relative w-full">
+                <div class="hero h-[550px]">
+                    <div class="hero-content flex-col-reverse lg:flex-row-reverse">
+                      <img src="./images/slider/bike2.png" class="w-[400px]" />
+                      <div class="flex-1 w-[600px]">
+                        <h1 class="text-5xl font-bold text-black">Ride-on R15 V4 <br>with Smile</h1>
+                        <p class="py-6 text-description-color">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
+                      </div>
+                    </div>
+                  </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn btn-circle">❮</a> 
+                <a href="#slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <!-- slide 3 -->
+            <div id="slide3" class="carousel-item relative w-full">
+                <div class="hero h-[550px]">
+                    <div class="hero-content flex-col-reverse lg:flex-row-reverse">
+                      <img src="./images/slider/bike3.png" class="w-[400px]" />
+                      <div class="flex-1 w-[600px]">
+                        <h1 class="text-5xl font-bold text-black">Ride-on R15 V4 <br>with Smile</h1>
+                        <p class="py-6 text-description-color">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
+                      </div>
+                    </div>
+                  </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide2" class="btn btn-circle">❮</a> 
+                <a href="#slide4" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <!-- slide 4 -->
+            <div id="slide4" class="carousel-item relative w-full">
+                <div class="hero h-[550px]">
+                    <div class="hero-content flex-col-reverse lg:flex-row-reverse">
+                      <img src="./images/slider/bike4.png" class="w-[400px]" />
+                      <div class="flex-1 w-[600px]">
+                        <h1 class="text-5xl font-bold text-black">Ride-on R15 V4 <br>with Smile</h1>
+                        <p class="py-6 text-description-color">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
+                      </div>
+                    </div>
+                  </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide3" class="btn btn-circle">❮</a> 
+                <a href="#slide1" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+          </div>
+          
 
 
     </header>
