made sliders responsive

--- a/Bikerzone.html
+++ b/Bikerzone.html
@@ -76,9 +76,9 @@
             <!-- slide 1 -->
             <div id="slide1" class="carousel-item relative w-full">
                 <div class="hero h-[550px]">
-                    <div class="hero-content flex-col-reverse lg:flex-row-reverse">
+                    <div class="hero-content flex-col-reverse gap-20 p-4 lg:flex-row-reverse lg:p-24">
                       <img src="./images/slider/bike1.png" class="w-[400px]" />
-                      <div class="flex-1 w-[600px]">
+                      <div class="flex-1">
                         <h1 class="text-5xl font-bold text-black">Ride-on R15 V4 <br>with Smile</h1>
                         <p class="py-6 text-description-color">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
                         <button class="btn bg-bike-primary text-white">Purchase</button>
@@ -93,9 +93,9 @@
             <!-- slide 2 -->
             <div id="slide2" class="carousel-item relative w-full">
                 <div class="hero h-[550px]">
-                    <div class="hero-content flex-col-reverse lg:flex-row-reverse">
+                    <div class="hero-content flex-col-reverse gap-20 p-4 lg:flex-row-reverse lg:p-24">
                       <img src="./images/slider/bike2.png" class="w-[400px]" />
-                      <div class="flex-1 w-[600px]">
+                      <div class="flex-1">
                         <h1 class="text-5xl font-bold text-black">Ride-on R15 V4 <br>with Smile</h1>
                         <p class="py-6 text-description-color">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
                         <button class="btn bg-bike-primary text-white">Purchase</button>
@@ -110,9 +110,9 @@
             <!-- slide 3 -->
             <div id="slide3" class="carousel-item relative w-full">
                 <div class="hero h-[550px]">
-                    <div class="hero-content flex-col-reverse lg:flex-row-reverse">
+                    <div class="hero-content flex-col-reverse gap-20 p-4 lg:flex-row-reverse lg:p-24">
                       <img src="./images/slider/bike3.png" class="w-[400px]" />
-                      <div class="flex-1 w-[600px]">
+                      <div class="flex-1">
                         <h1 class="text-5xl font-bold text-black">Ride-on R15 V4 <br>with Smile</h1>
                         <p class="py-6 text-description-color">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
                         <button class="btn bg-bike-primary text-white">Purchase</button>
@@ -127,9 +127,9 @@
             <!-- slide 4 -->
             <div id="slide4" class="carousel-item relative w-full">
                 <div class="hero h-[550px]">
-                    <div class="hero-content flex-col-reverse lg:flex-row-reverse">
+                    <div class="hero-content flex-col-reverse gap-20 p-4 lg:flex-row-reverse lg:p-24">
                       <img src="./images/slider/bike4.png" class="w-[400px]" />
-                      <div class="flex-1 w-[600px]">
+                      <div class="flex-1">
                         <h1 class="text-5xl font-bold text-black">Ride-on R15 V4 <br>with Smile</h1>
                         <p class="py-6 text-description-color">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
                         <button class="btn bg-bike-primary text-white">Purchase</button>
@@ -141,13 +141,17 @@
                 <a href="#slide1" class="btn btn-circle">❯</a>
               </div>
             </div>
-          </div>
-          
-
-
+          </div>      
     </header>
 
     <main>
+
+        <!-- featured bikes -->
+        <!-- <div class="image-container">
+            <img src="./images/others/latest1.png" alt="">
+            <img src="./images/others/latest2.png" alt="">
+            <img src="./images/others/latest3.png" alt="">
+        </div> -->
 
 
     </main>
