--- a/Bikerzone.html
+++ b/Bikerzone.html
@@ -144,14 +144,19 @@
           </div>      
     </header>
 
-    <main>
+    <main class="md: container md: mx-auto">
 
         <!-- featured bikes -->
-        <!-- <div class="image-container">
-            <img src="./images/others/latest1.png" alt="">
-            <img src="./images/others/latest2.png" alt="">
-            <img src="./images/others/latest3.png" alt="">
-        </div> -->
+        <section class="my-24">
+            <h3 class="text-5xl font-semibold text-black text-center">Featured Bikes In This Year</h3>
+            <p class="text-xs text-bike-primary text-center">Best bike collection</p>
+            
+        <div class="image-container my-14 flex flex-col gap-20 lg:flex-row">
+            <img src="./images/others/extrabike.png" alt="">
+            <img src="./images/others/feature-bike.png" alt="">
+            <img src="./images/others/extrabike.png" alt="">
+        </div>
+        </section>
 
 
     </main>
